--- a/cs_client/src/assets/styles/modules/document/rich-text.scss
+++ b/cs_client/src/assets/styles/modules/document/rich-text.scss
@@ -1,29 +1,22 @@
 .rich-text__container {
   grid-area: rich-text;
-  //border: red 2px solid;
-  //font-size: 22px;
-  //overflow: auto;
-  margin-top: 6px;
-  margin-left: 6px;
   position: relative;
   overflow: auto;
 }
 .rich-text {
+  box-sizing: border-box;
+  padding: 6px;
   font-size: 22px;
   overflow: auto;
   width: 100%;
   height: 100%;
   margin: 0;
-  //margin-top: 6px;
-  //margin-left: 6px;
-  //position: relative;
+
+  &:focus {
+    outline: none;
+  }
 }
 .rich-text__anchor {
   width: 20px;
   padding: 2px;
-}
-
-.rich-text__error {
-  color: #808080;
-  padding: 10px;
 }
