--- a/cs_client/src/assets/styles/modules/search/search.scss
+++ b/cs_client/src/assets/styles/modules/search/search.scss
@@ -9,7 +9,7 @@ $text-color: grey;
   }
   width: 250px;
   height: 100%;
-  margin-right: 50px;
+  margin-right: 30px;
   display: flex;
   align-items: center;
   background-color: $bg-color;
