--- a/cs_client/src/assets/styles/modules/shared-components/google-oauth-button.scss
+++ b/cs_client/src/assets/styles/modules/shared-components/google-oauth-button.scss
@@ -6,7 +6,7 @@
   max-width: 184px;
   height: 42px;
   background-color: #fcfcfc;
-  border-radius: 2px;
+  border-radius: 5px;
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2);
   cursor: pointer;
   cursor: hand;
